lab03/grade.txt
******************* PART 1 BoatTest *********************
*************COMPILATION ERROR*******************
src/csu/csci325/Fleet.java:35: error: '.class' expected
        return Fleet[];
                      ^
1 error
Compilation errors, please fix...
******************* PART 2 SailBoatTest *********************
*************COMPILATION ERROR*******************
src/csu/csci325/Fleet.java:35: error: '.class' expected
        return Fleet[];
                      ^
1 error
Compilation errors, please fix...
******************* PART 3 TugBoatTest *********************
*************COMPILATION ERROR*******************
src/csu/csci325/Fleet.java:35: error: '.class' expected
        return Fleet[];
                      ^
1 error
Compilation errors, please fix...
******************* PART 4 FleetTest *********************
*************COMPILATION ERROR*******************
src/csu/csci325/Fleet.java:35: error: '.class' expected
        return Fleet[];
                      ^
1 error
Compilation errors, please fix...
Auto-grader grade: *****************Finished lab03****************
